samples/_failures_safe/1761321628_632c4f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b51a5c8.c: In function ‘main’:
./samples/SAFE/__tmp_8b51a5c8.c:158:24: error: missing terminating " character
  158 |                 printf("Error: Matrices must have same dimensions for addition.\n
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8b51a5c8.c:158:17: error: expected expression at end of input
  158 |                 printf("Error: Matrices must have same dimensions for addition.\n
      |                 ^~~~~~
./samples/SAFE/__tmp_8b51a5c8.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8b51a5c8.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8b51a5c8.c:158:17: error: expected declaration or statement at end of input
